# calcService

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/application/: calculate_income.py
app/application/mappers/: member_mapper.py
app/application/services/: income_service.py  user_service.py
app/core/: settings.py
app/domain/: exceptions.py
app/domain/models/: member.py
app/domain/repositories/: member_repository.py
app/domain/services/: income_calculator.py  mlm_calculator.py
app/domain/value_objects/: BreakdownItem.py  level.py  levels.py  qualification.py  qualifications.py
app/infrastructure/db/: member.py  models.py  session.py
app/static/: index.html
app/web/: api.py  exception_handlers.py  schemas.py  utils.py
app/web/routers/: api.py  user.py
app/web/scheme/: schemas.py  user.py
tests/: test_api.py  test_member.py
tests/api/: test_calculate_income.py  test_user_structure.py  test_validation.py
tests/application/: test_income_usecase.py
tests/domain/: conftest.py  factories.py  test_income_calculator.py  test_income_calculator_refactored.py  test_level.py  test_member.py  test_member_volume.py  test_qualification.py  test_side_volume.py
tests/repositories/: test_member_repository.py
tests/services/: test_user_service_structure.py
