[project]
name = "calcservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.124.4",
    "psycopg[async,binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlalchemy[asyncio]>=2.0",
]
